[gd_scene load_steps=13 format=3 uid="uid://d3xhcie0alhov"]

[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_sa5sg"]
[ext_resource type="PackedScene" uid="uid://bse3ca1xapqu0" path="res://objects/lives/lives.tscn" id="2_gdurv"]
[ext_resource type="PackedScene" uid="uid://ditaic0utel4p" path="res://objects/wave_label/wave_label.tscn" id="3_st06c"]
[ext_resource type="PackedScene" uid="uid://x48wm0epe2xi" path="res://objects/camera/camera.tscn" id="4_ucdfd"]
[ext_resource type="AudioStream" uid="uid://biwctbgc8k0hf" path="res://sounds/ship_die.wav" id="5_3ft6e"]
[ext_resource type="AudioStream" uid="uid://o0mhffpdcxs6" path="res://sounds/game_over.wav" id="6_5fhgc"]
[ext_resource type="AudioStream" uid="uid://dygjbniaowbej" path="res://sounds/level_start.wav" id="7_lu7xw"]
[ext_resource type="AudioStream" uid="uid://c30ytmn0135ij" path="res://sounds/level_music.wav" id="8_ipwmj"]
[ext_resource type="AudioStream" uid="uid://blkxvgxwjyi2i" path="res://sounds/boss_music.wav" id="9_l57nk"]
[ext_resource type="AudioStream" uid="uid://bdejmj1dy1j0p" path="res://sounds/boss_spawn.wav" id="10_it5up"]
[ext_resource type="AudioStream" uid="uid://crgd358mrx8yv" path="res://sounds/victory.wav" id="11_1xw0h"]
[ext_resource type="LabelSettings" uid="uid://ei4t8rcst2af" path="res://objects/wave_label/wave_label.tres" id="12_0cl1d"]

[node name="game" type="Node2D"]
process_mode = 1
script = ExtResource("1_sa5sg")

[node name="lives" parent="." instance=ExtResource("2_gdurv")]

[node name="wave_label" parent="." instance=ExtResource("3_st06c")]
visible = false
offset_right = 128.0
offset_bottom = 128.0

[node name="camera" parent="." instance=ExtResource("4_ucdfd")]

[node name="ship_die" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_3ft6e")

[node name="game_over" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_5fhgc")

[node name="level_start" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_lu7xw")

[node name="level_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ipwmj")

[node name="boss_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_l57nk")

[node name="boss_spawn" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_it5up")

[node name="victory_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_1xw0h")

[node name="message" type="Label" parent="."]
visible = false
offset_left = 16.0
offset_top = 40.0
offset_right = 116.0
offset_bottom = 120.0
text = "you have saved the galaxy
from certain doom by the
the swarms of evil bugs!
and their big evil boss!

good job."
label_settings = ExtResource("12_0cl1d")
horizontal_alignment = 1

[connection signal="finished" from="boss_spawn" to="." method="_on_boss_spawn_finished"]
